--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
-    <link rel="stylesheet" href="StopWatch/style.css">
+    <link rel="stylesheet" href="Stopwatch/style.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,6 @@
         </div>
     </div>
 
-    <script src="StopWatch/index.js"></script>
+    <script src="Stopwatch/index.js"></script>
 </body>
 </html>
